--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <P style="font-weight:500; font-size:4.0em;line-height:30px;">你好.</p>
   <h1 >欢迎来到宋向阳的主页。</h1>
   <p>
-    你有在搜索宋向阳吗？找我？受宠若惊，既然来了就了解下网络上的我^_^
+    床前明月光，疑是地上霜。随便看一下^_^
   </p>
   <p>
 	比如我在<a href="https://www.zhihu.com/people/songxiangyang/activities" target="_blank">知乎</a>给谁点赞了...    
@@ -65,10 +65,10 @@
     或者通过<a href="http://wpa.qq.com/msgrd?v=3&uin=1975602660&menu=yes" target="_blank" >QQ</a>和我聊两句...
   </p>
   <p>
-    或者给我<a href = "mailto:song@xy3s.com">发封电子邮件</a>...
+    或者给我<a href = "mailto:sxy@6nm.cc">发封电子邮件</a>...
   </p><br>
   <p>
-   要不加个好友来个视频？说下来意哈，如：闲聊<br>
+   加个好友我看行！:)<br>
    <img src="./1559737339.png"  alt="宋向阳微信二维码" />
   </p>
   <br>
