--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       font-size: calc(10px + 0.33vw);
       -webkit-font-smoothing: antialiased;
       padding: 5vh 10vw;
+      background:#121314;
       color: #121314;
     }
     h1 {
