--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278565430&web_id=1278565430" type="hidden"></script>
+  <div style="display:none">
+  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278565430&web_id=1278565430"></script>
+  </div>
   <P style="font-weight:500; font-size:4.0em;line-height:30px;">你好.</p>
   <h1 >欢迎来到宋向阳的主页。</h1>
   <p>
