--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="songxiangyang,宋向阳,宋向阳主页,宋向阳QQ,宋向阳邮箱">
   <meta name="description" content="欢迎访问宋向阳的个人主页，这里有宋向阳的邮箱、宋向阳知乎、宋向阳微博。有朋自远方来，不亦乐乎？" />
-  <link href="./main.css" rel="stylesheet">
+  <link href="./main1.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
