--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="songxiangyang,宋向阳,宋向阳主页,宋向阳QQ,宋向阳邮箱">
   <meta name="description" content="欢迎访问宋向阳的个人主页，这里有宋向阳的邮箱、宋向阳知乎、宋向阳微博。有朋自远方来，不亦乐乎？" />
-  <link href="./main1.css" rel="stylesheet">
+  <link href="./main.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -54,7 +54,7 @@
   <div style="display:none">
   <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278565430&web_id=1278565430"></script>
   </div>
-  <P style="font-weight:500; font-size:4.0em;line-height:30px;">你好.</p>
+  <P style="font-weight:500; font-size:4.0em;line-height:30px;margin-top:0px;padding-top:0px;">你好.</p>
   <h1 >欢迎来到宋向阳的主页。</h1>
   <p>
     床前明月光，疑是地上霜。随便看一下^_^
