--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
     床前明月光，疑是地上霜。随便看一下^_^
   </p>
   <p>
-	比如我在<a href="https://www.zhihu.com/people/songxiangyang/activities" target="_blank">知乎</a>给谁点赞了...    
+	比如我在<a href="https://www.zhihu.com/people/na-nin-ke-zhen-shi-ge-di-di" target="_blank">知乎</a>给谁点赞了...    
   </p>
   <p>
-	或者看一下我的<a href="https://weibo.com/50n99" target="_blank">微博</a>？
+	我的<a href="https://weibo.com/50n99" target="_blank">微博</a>？
   </p>
   <p>
-    或者通过<a href="http://wpa.qq.com/msgrd?v=3&uin=1975602660&menu=yes" target="_blank" >QQ</a>和我聊两句...
+    或许你喜欢使用<a href="http://wpa.qq.com/msgrd?v=3&uin=1975602660&menu=yes" target="_blank" >QQ</a>...
   </p>
   <p>
-    或者给我<a href = "mailto:sxy@6nm.cc">发封电子邮件</a>...
+    一封<a href = "mailto:sxy@6nm.cc">电子邮件</a>...
   </p><br>
   <p>
    加个好友我看行！:)<br>
