--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>宋向阳-向阳主页简介中国西平</title>
+  <title>宋向阳-50N9</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="songxiangyang,宋向阳,宋向阳主页,宋向阳QQ,宋向阳邮箱">
   <meta name="description" content="欢迎访问宋向阳的个人主页，这里有宋向阳的邮箱、宋向阳知乎、宋向阳微博。有朋自远方来，不亦乐乎？" />
@@ -69,7 +69,7 @@
     或许你喜欢使用<a href="http://wpa.qq.com/msgrd?v=3&uin=1975602660&menu=yes" target="_blank" >QQ</a>...
   </p>
   <p>
-    一封<a href = "mailto:sxy@6nm.cc">电子邮件</a>...
+    我喜欢<a href = "mailto:sxy@6nm.cc">电子邮件</a>，绝对纯粹的通信工具...
   </p><br>
   <p>
    加个好友我看行！:)<br>
