--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
       top: 0%;
     }
   </style>
+  <div style="display:none">
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?13bdb30be581e5bd0dc5dcb08f086110";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+  </div>
 </head>
 <body>
-  <div style="display:none">
-  <script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278565430&web_id=1278565430"></script>
-  </div>
   <P style="font-weight:500; font-size:4.0em;line-height:30px;margin-top:0px;padding-top:0px;">你好.</p>
   <h1 >欢迎来到宋向阳的主页。</h1>
   <p>
