--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>宋向阳-50N9</title>
+  <title>7.06&7.20</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="songxiangyang,宋向阳,宋向阳主页,宋向阳QQ,宋向阳邮箱">
   <meta name="description" content="欢迎访问宋向阳的个人主页，这里有宋向阳的邮箱、宋向阳知乎、宋向阳微博。有朋自远方来，不亦乐乎？" />
