--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
   <link href="./main.css" rel="stylesheet">
 <link href="https://q1.qlogo.cn/g?b=qq&nk=1975602660&s=640" mce_href="https://q1.qlogo.cn/g?b=qq&nk=1975602660&s=640" rel="icon" type="image/x-icon">
 <!--<link rel="shortcut icon" href="/slogo.jpg" type="image/x-icon" />-->
+	  <style>
+    /* 置顶栏样式 */
+    .top-bar {
+      position: fixed;  /* 固定定位 */
+      top: 0;          /* 固定在顶部 */
+      left: 0;
+      width: 100%;     /* 全宽度 */
+      background: #333; /* 背景色 */
+      color: white;
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 阴影效果 */
+      z-index: 1000;   /* 确保在最上层 */
+    }
+
+    /* 页面内容（避免被置顶栏遮挡） */
+    .content {
+      margin-top: 60px; /* 与置顶栏高度一致 */
+      padding: 20px;
+    }
+  </style>
+	<body>
+  <!-- 置顶栏 -->
+  <div class="top-bar">这里是置顶栏（如导航栏、通知栏）</div>
+
+  <!-- 页面内容 -->
+  <div class="content">
+    <h1>页面内容</h1>
+    <p>滚动页面时，置顶栏会一直固定在顶部。</p >
+  </div>
+</body>
+	
   <style>
     body {
       font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
