--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
       top: 0;          /* 固定在顶部 */
       left: 0;
       width: 100%;     /* 全宽度 */
-      background: #333; /* 背景色 */
-      color: white;
+      background: #4FC08D; /* 背景色 */
+      color: black;
       padding: 10px 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 阴影效果 */
       z-index: 1000;   /* 确保在最上层 */
+      font-size: 1.6em;
     }
 
     /* 页面内容（避免被置顶栏遮挡） */
@@ -33,13 +34,7 @@
   </style>
 	<body>
   <!-- 置顶栏 -->
-  <div class="top-bar">这里是置顶栏（如导航栏、通知栏）</div>
-
-  <!-- 页面内容 -->
-  <div class="content">
-    <h1>页面内容</h1>
-    <p>滚动页面时，置顶栏会一直固定在顶部。</p >
-  </div>
+  <div class="top-bar">大雨，很高兴认识你 -向阳</div>
 </body>
 	
   <style>
