--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     /* 页面内容（避免被置顶栏遮挡） */
     .content {
-      margin-top: 60px; /* 与置顶栏高度一致 */
+      padding-top: 60px; /* 与置顶栏高度一致 */
       padding: 20px;
     }
   </style>
