--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 	<body>
   <!-- 置顶栏 -->
-  <div class="top-bar">大雨，很高兴认识你 -向阳</div>
+  <div class="top-bar">大雨，很高兴认识你&emsp&emsp-向阳</div>
 </body>
 	
   <style>
